libgue: Generate and install pkg-config data
This commit adds libgue/libgue.pc.in and the make rules required to
install the resulting .pc

--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,7 @@ dnl ###########################################################################
 AC_CONFIG_FILES([
 Makefile
 libgue/Makefile
+libgue/libgue.pc
 src/Makefile
 ])
 AC_OUTPUT
