libgue: Clean old typelibs
I just noticed that version bumping produces .gir and .typelib files
that `make clean` doesn't know about. This commit adds a clean-local
hook to clean these up.

--- a/libgue/Makefile.am
+++ b/libgue/Makefile.am
@@ -55,5 +55,8 @@ CLEANFILES = \
 	$(BUILT_SOURCES) \
 	*.stamp
 
+clean-local:
+	rm -f *.gir *.typelib
+
 dist-hook:
 	cd $(distdir); rm -f $(CLEANFILES)
