libgue: Detect ExactAudioCopy cue sheets
ExactAudioCopy produces sheets that are not even slightly
spec-compliant.  Disabling known broken features is easier than trying
to make sense of broken sheets, so for the time being this is what will
happen. I do intend to fix this in the future, but this will do for now.

This adds a new bit of API: a bool flag, `generated_by_eac`, has been
added to `Gue.Sheet`. As such, version has been bumped to 0.6.

This commit also adds the first test! Hooray!

--- a/libgue/tests/Makefile.am
+++ b/libgue/tests/Makefile.am
@@ -1,16 +1,17 @@
 include $(top_srcdir)/build-aux/glib-tap.mk
 
 test_programs = \
-	parser-test
+	tests
 
-parser_test_SOURCES = \
+tests_SOURCES = \
 	../gue-$(VERSION).vapi \
-	parser-test.vala
-parser_test_VALAFLAGS = $(cue_U_VALAFLAGS)
-parser_test_CFLAGS = \
+	eac-test.vala \
+	tests.vala
+tests_VALAFLAGS = $(cue_U_VALAFLAGS)
+tests_CFLAGS = \
 	-I../ \
 	$(cue_U_CFLAGS)
-parser_test_LDADD = \
+tests_LDADD = \
 	../libgue.la \
 	$(cue_U_LIBS)
 
