libgue: Add test for non-latin chars
This commit adds a test for libgue to ensure it spits out good unicode
strings.

--- a/libgue/tests/Makefile.am
+++ b/libgue/tests/Makefile.am
@@ -6,6 +6,7 @@ test_programs = \
 tests_SOURCES = \
 	../gue-$(VERSION).vapi \
 	eac-test.vala \
+	non-latin-test.vala \
 	tests.vala
 tests_VALAFLAGS = $(cue_U_VALAFLAGS)
 tests_CFLAGS = \
