Add test for pathological EAC sheets
I found a particularly bad EAC cue sheet in my library (one that I most
certainly cannot read myself), so I've added it to the libgue test
suite. I was a little dubious regarding libgue's interpretation, but
comparing it to the files it is spot-on.

--- a/libgue/tests/Makefile.am
+++ b/libgue/tests/Makefile.am
@@ -6,6 +6,7 @@ test_programs = \
 tests_SOURCES = \
 	../gue-$(SHORT_VERSION).vapi \
 	eac-test.vala \
+	pathological-eac-test.vala \
 	non-latin-test.vala \
 	utf16-test.vala \
 	tests.vala
