Add support for cue sheet writing
This commit allows Gue object properties to be written to and for the
objects to be serialised back into a cue sheet. This obviously involved
a lot of API-breaking changes, so note the following:

 * Tracks must belong to files now
 * is_eac_generated is gone
 * Constructors are now available for objects
 * Gue.Sheet now has a to_string method

--- a/cue-munger.spec.in
+++ b/cue-munger.spec.in
@@ -9,6 +9,7 @@ Source0:        %{url}/archive/%{version}.tar.gz
 
 BuildRequires:  vala
 BuildRequires:  glib2-devel
+BuildRequires:  libgee-devel
 BuildRequires:  gobject-introspection-devel
 BuildRequires:  ragel
 BuildRequires:  uchardet-devel
