--- a/configure.ac
+++ b/configure.ac
@@ -26,10 +26,12 @@ PKG_CHECK_MODULES(cue_U, [
   glib-2.0 >= $GLIB_REQUIRED
   gobject-2.0 >= $GLIB_REQUIRED
   gio-2.0 >= $GLIB_REQUIRED
+  gee-0.8
   uchardet
 ])
 
 AC_SUBST([cue_U_VALAFLAGS], ["--pkg gio-2.0 \
+          --pkg gee-0.8 \
           --target-glib=$GLIB_REQUIRED \
           --fatal-warnings \
           --enable-checking \
